Thêm Managge Factory và Manage Target